--- a/surprise.html
+++ b/surprise.html
@@ -13,8 +13,8 @@
 <body id="surprise">
     <div class="container-surp">
         <div class="letter">
-            <h4 class="title-letter">oli</h4>
-            <p class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat laboriosam blanditiis placeat recusandae mollitia non rerum, reiciendis, consequuntur beatae adipisci id ad quo assumenda nisi repudiandae totam quisquam rem ipsam.</p>
+            <h4 class="title-letter">Feliz cumpleaños bonita o(≧∀≦)o</h4>
+            <p class="content"><strong>Hoy es tu día y de verdad quiero que sea súper especial para ti, porque te lo mereces. Eres una persona increíble, y no sabes lo feliz que me hace estar contigo. Ojalá pudiera abrazarte todo el día y llenarte de besos para que veas cuánto te amo porque de verdad no tienes idea de lo increíble que eres y lo importante que eres para mi (mi persona favorita) <br><br>Desde que estamos juntas, todo es mucho más bonito. Me encanta escucharte hablar de lo que te gusta, reírme de tus chistes malos (bueno, todos son malos) y simplemente estar contigo. No sé cómo explicarlo, pero todo se siente más fácil y lindo cuando eres tú. <br><br>Espero que hoy la pases increíble con tus amigos y tu mami, que comas rico, que te diviertas mucho, seas muy feliz y que recibas mucho amor (aunque obvio el mío ya lo tienes). Me gustaría poder darte más, porque de verdad creo que mereces todo lo bonito del mundo, pero por ahora espero que te guste porque lo di todo. (๑•̀ㅂ•́)و✧ <br><br>Te amo muchísimo, y no me voy a cansar de decírtelo. <br><br>Feliz cumpleaños, preciosaヾ(≧▽≦*)o</strong></p>
         </div>
 
         <div class="division">
@@ -98,7 +98,7 @@
 
             <div class="btns">
                 <div class="button-surp">
-                    <a href="https://open.spotify.com/playlist/7n46FmA8shSgU67PwsF1fe?si=4eb79c131acc4fe6&pt=7d825d7f44700db2be68444edd66b19b">
+                    <a href="https://open.spotify.com/playlist/7n46FmA8shSgU67PwsF1fe">
                         <button type="button" class="btn btn-outline-dark w-100">˚ʚ♡ɞ˚</button>
                     </a>
                 </div>
